--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
             <!-- <div id="div2"> -->
             <p id="answer">Your best guess:</p>
             <input type="number" id="num" name="num" min="1" max="20" />
-            <br /><br />
+            <br />
             <button id="check">Check</button>
-            <p id="try">Try it</p>
             <button id="reset">Play again</button>
             <!-- </div> -->
           </section>
           <section class="right">
-            <p class="message">Start guessing...</p>
-            <p class="label-score">💯 Score: <span class="score">20</span></p>
+            <p id="message">Start guessing...</p>
+            <p class="label-score">💯 Score: <span id="score">20</span></p>
             <p class="label-highscore">
-              🥇 Highscore: <span class="highscore">0</span>
+              🥇 Highscore: <span id="highscore">0</span>
             </p>
           </section>
         </main>
